# weather-zone

./: .gitignore  LICENSE  README.md  build.sh  manage.py  package.json  pyproject.toml
addresses/: __init__.py  admin.py  apps.py  constants.py  dto.py  enums.py  forms.py  models.py  services.py  signals.py  urls.py
addresses/migrations/: 0001_initial.py  0002_address_global_plus_code_address_place_id.py
addresses/templatetags/: __init__.py  address_element_id.py
addresses/views/: __init__.py  address_by.py  address_create.py  address_list.py  address_mixin.py  address_queries.py  utils.py
base/: __init__.py  app_info.py  constants.py  context_processors.py  credits.py  modal_toast.py  payloads.py  requests.py  urls.py  views.py
base/templatetags/: attr_append.py  conjoin.py  delete_modal_ids.py  (+5 more)
broker/: __init__.py  apps.py  broker.py  iservice.py  signals.py
docs/: readme.md
forecast/: __init__.py  apps.py  beaufort.py  constants.py  context_processors.py  convert.py  dto.py  enums.py  forecast.py  forms.py  geocoding.py  help.py  iprovider.py  loader.py  map_embed.py  misc.py  provider.py  registry.py  services.py  signals.py  urls.py  views.py
locationforecast/: apps.py  constants.py  legends.py  met_eireann.py  met_eireann_forecast.py  met_norway.py  met_norway_classic.py  provider.py  signals.py
met_eireann/: apps.py  constants.py  provider.py  signals.py
static/: site.webmanifest
templates/: 400.html  403.html  404.html  500.html  base.html  status_code_error.html
user/: __init__.py  admin.py  apps.py  constants.py  context_processors.py  forms.py  help.py  models.py  permissions.py  services.py  signals.py  urls.py  urls_auth.py  views.py
utils/: __init__.py  content_list_mixin.py  dto.py  enums.py  forms.py  html.py  misc.py  models.py  permissions.py  query_params.py  search.py  singleton.py  url_path.py  views.py
weather_warning/: __init__.py  apps.py  constants.py  dto.py  met_eireann_warning.py  misc.py  provider.py  regions.py  signals.py  urls.py  views.py
weather_zone/: __init__.py  asgi.py  constants.py  context_processors.py  misc.py  s3_storage.py  settings.py  urls.py  wsgi.py
(+96 files in other folders)
