[tool.poetry]
name = "weather-zone"
version = "0.1.0"
license = "MIT"
description = "Weather forecast application"
authors = ["Ian Buttimer <ibuttimer@yahoo.com>"]
readme = "README.md"
packages = [{include = "weather_zone"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-environ = "^0.11.2"
googlemaps = "^4.10.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
django-countries = "^7.5.1"
xmltodict = "^0.13.0"
psycopg2 = "^2.9.7"
tzdata = "^2023.3"
django-allauth = "^0.56.1"
gunicorn = "^21.2.0"
django-storages = "^1.14"
boto3 = "^1.28.55"
geoip2 = "^4.7.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
docutils = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
